--- a/MauiApp1/MauiApp1/MauiApp1.csproj
+++ b/MauiApp1/MauiApp1/MauiApp1.csproj
@@ -22,6 +22,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AsyncAwaitBestPractices" Version="9.0.0" />
 		<PackageReference Include="CompiledBindings.MAUI" Version="1.0.18" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.100" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.2" />
